minor improvements in translation

--- a/app/src/main/res/values-fa/about.xml
+++ b/app/src/main/res/values-fa/about.xml
@@ -2,7 +2,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
     <string name="about_close">بستن</string>
     <string name="about_whoami">من مونروجو هستم</string>
-    <string name="about_version">نسخه %1$s (%2$d)</string>
+    <string name="about_version">
+    نسخهٔ
+    %1$s (%2$d)
+    </string>
 
     <string name="credits_text"><![CDATA[
         <b>دست اندرکاران</b>
@@ -15,26 +18,42 @@
 
     <string name="privacy_policy"><![CDATA[
         <h1>خط‌مشی رازداری</h1>
-        <p>این صفحه شما را از سیاست‌های ما در مورد جمع‌آوری، استفاده و افشای اطلاعات شخصی که از کاربران برنامه خود (مونروجو به معنای کیف‌پول مونرو) دریافت می‌کنیم مطلع می‌کند.</p>
-        <p>با استفاده از برنامه، با جمع‌آوری و استفاده از اطلاعات مطابق با این سیاست موافقت می کنید.</p>
+        <p>این صفحه شما را از سیاست‌های ما در مورد جمع‌آوری، استفاده و افشای اطلاعات شخصی که از کاربران برنامهٔ خود (مونروجو به معنای «کیف‌پول مونرو») دریافت می‌کنیم مطلع می‌کند.</p>
+        <p>با استفاده از برنامه، با جمع‌آوری و استفاده از اطلاعات، مطابق با این سیاست، موافقت می‌کنید.</p>
         <h2>داده‌های جمع‌آوری شده</h2>
         <p>داده‌های شخصی هر نوع داده‌ای است که بتواند یک فرد را شناسایی کند.</p>
         <p>کلیدها و آدرس‌های عمومی مونرو توسط برنامه به صورت داخلی برای پردازش تراکنش‌ها جمع‌آوری و پردازش می‌شوند و به شکل رمزگذاری شده به شبکه مونرو منتقل می شوند.</p>
         <p>سایر اطلاعات شخصی توسط برنامه جمع‌آوری نمی‌شود.</p>
-        <p>اگر از قابلیت اختیاری تبدیل استفاده کنید، این برنامه نرخ ارز را از طریق API عمومی coinmarketcap.com دریافت می‌کند. برای اطلاع از جزئیات نحوه جمع‌آوری داده‌های درخواست‌هایتان، خط‌مشی رازداری آنها را در https://coinmarketcap.com/privacy ببینید.</p>
-        <p>اگر از برنامه برای پرداخت به آدرس‌های بیت‌کوین استفاده می‌کنید، از سرویس SideShift.ai استفاده خواهید کرد. برای جزئیات بیشتر به خط‌مشی رازداری آنها در https://sideshift.ai مراجعه کنید. مونروجو مقدار و آدرس مقصد بیت‌کوین را برای آنها ارسال می‌کند. آدرس IP شما نیز قابل جمع‌آوری خواهد بود.</p>
+        <p>
+        اگر از قابلیت اختیاری تبدیل رمزارز استفاده کنید، این برنامه نرخ ارز را از طریق API عمومی coinmarketcap.com دریافت می‌کند. برای اطلاع از جزئیات نحوهٔ جمع‌آوری داده‌های درخواست‌هایتان، خط‌مشی رازداری آنها را در
+        <a href="https://coinmarketcap.com/privacy">coinmarketcap.com/privacy</a>
+        ببینید.
+        </p>
+        <p>
+        اگر از برنامه برای پرداخت به آدرس‌های بیت‌کوین استفاده می‌کنید، از سرویس SideShift.ai استفاده خواهید کرد. برای جزئیات بیشتر به خط‌مشی رازداری آنها در
+        <a href="https://sideshift.ai">sideshift.ai</a>
+        مراجعه کنید. مونروجو مقدار و آدرس مقصد بیت‌کوین را برای آنها ارسال می‌کند. آدرس IP شما نیز قابل جمع‌آوری خواهد بود.
+        </p>
         <h2>دسترسی‌های نرم‌افزار</h2>
         <ul>
-        <li>اینترنت: اتصال به شبکه مونرو</li>
-        <li>خوانش حافظه خارجی: خواندن فایل‌های کیف‌پول ذخیره شده برروی دستگاه</li>
-        <li>نوشتار حافظه خارجی: نوشتن فایل‌های کیف‌پول ذخیره شده برروی دستگاه</li>
+        <li>اینترنت: اتصال به شبکهٔ مونرو</li>
+        <li>خوانش حافظهٔ خارجی: خواندن فایل‌های کیف‌پول ذخیره شده برروی دستگاه</li>
+        <li>نوشتار حافظهٔ خارجی: نوشتن فایل‌های کیف‌پول ذخیره شده برروی دستگاه</li>
         <li>قفل بیداری: بیدار نگه داشتن دستگاه در هنگام همگام‌سازی</li>
         <li>دوربین: اسکن کدهای کیوآر برای ارسال مونرو</li>
         </ul>
         <h2>تغییرات در این خط‌مشی رازداری</h2>
-        <p>ممکن است هرازچندگاهی این خط‌مشی رازداری را به‌روز کنیم. ما با ارسال خط‌مشی رازداری جدید در برنامه و وب‌سایت (www.monerujo.app) شما را از هرگونه تغییر مطلع خواهیم کرد. به شما توصیه می‌شود برای هرگونه تغییر، این خط‌مشی رازداری را به صورت دوره‌ای مرور کنید.</p>
-        <p>آخرین به‌روزرسانی این خط‌مشی رازداری: 10 نوامبر 2017.</p>
+        <p>
+        ممکن است هرازچندگاهی این خط‌مشی رازداری را به‌روز کنیم. ما با ارسال خط‌مشی رازداری جدید در برنامه و وب‌سایت
+        <a href="https://monerujo.app">(www.monerujo.app)</a>
+        شما را از هرگونه تغییر مطلع خواهیم کرد. به شما توصیه می‌شود برای هرگونه تغییر، این خط‌مشی رازداری را به صورت دوره‌ای مرور کنید.
+        </p>
+        <p>آخرین به‌روزرسانی این خط‌مشی رازداری: 10 نوامبر 2017</p>
         <h2>تماس با ما</h2>
-        <p>اگر در مورد خط‌مشی رازداری ما یا نحوه جمع‌آوری و پردازش داده‌های خود سؤالی دارید، لطفا به privacy@monerujo.io ایمیل بزنید.</p>
+        <p>
+        اگر در مورد خط‌مشی رازداری ما یا نحوهٔ جمع‌آوری و پردازش داده‌های خود سؤالی دارید، لطفا به
+        <a href="mailto:privacy@monerujo.io">privacy@monerujo.io</a>
+        ایمیل بزنید.
+        </p>
         ]]></string>
 </resources>
