--- a/app/src/main/res/values-fa/about.xml
+++ b/app/src/main/res/values-fa/about.xml
@@ -23,7 +23,7 @@
         <h2>داده‌های جمع‌آوری شده</h2>
         <p>داده‌های شخصی هر نوع داده‌ای است که بتواند یک فرد را شناسایی کند.</p>
         <p>کلیدها و آدرس‌های عمومی مونرو توسط برنامه به صورت داخلی برای پردازش تراکنش‌ها جمع‌آوری و پردازش می‌شوند و به شکل رمزگذاری شده به شبکه مونرو منتقل می شوند.</p>
-        <p>سایر اطلاعات شخصی توسط برنامه جمع‌آوری نمی‌شود.</p>
+        <p>سایر اطلاعات شخصی توسط برنامه جمع‌آوری نمی‌شوند.</p>
         <p>
         اگر از قابلیت اختیاری تبدیل رمزارز استفاده کنید، این برنامه نرخ ارز را از طریق API عمومی coinmarketcap.com دریافت می‌کند. برای اطلاع از جزئیات نحوهٔ جمع‌آوری داده‌های درخواست‌هایتان، خط‌مشی رازداری آنها را در
         <a href="https://coinmarketcap.com/privacy">coinmarketcap.com/privacy</a>
