<br/> tags fixed

--- a/app/src/main/res/values-fa/help.xml
+++ b/app/src/main/res/values-fa/help.xml
@@ -317,7 +317,7 @@
         بخوانید.
         <h2>فهرست تراکنش‌ها</h2>
         <p>یک فهرست از تراکنش‌های کیف پول.
-        <br>
+        <br/>
         در کیف پول «فقط مشاهده‌ای» (کیف پولی که فقط با کلید مشاهده ساخته شده)، فقط تراکنش‌های دریافتی نشان داده می‌شوند.</p>
     ]]></string>
 
@@ -373,8 +373,10 @@
         شما مونروجو را با یک لینک پرداخت آغاز کرده‌اید، برای ارسال وجوه، لطفا این مراحل را انجام دهید:
         </p>
         <p>
-        1. کیف پولی که قصد استفاده از آن را دارید باز کنید<br>
-        2. تا زمان همگام شدن کیف پول و ظاهر شدن دکمهٔ «ارسال» منتظر بمانید<br>
+        1. کیف پولی که قصد استفاده از آن را دارید باز کنید
+        <br/>
+        2. تا زمان همگام شدن کیف پول و ظاهر شدن دکمهٔ «ارسال» منتظر بمانید
+        <br/>
         3. دکمهٔ «پرداخت» را لمس کنید
         </p>
         <p>
