better translation of word Mnemonic to Farsi

--- a/app/src/main/res/values-fa/help.xml
+++ b/app/src/main/res/values-fa/help.xml
@@ -7,20 +7,20 @@
         یک نام کیف پول و رمز عبور منحصر به فرد وارد کنید. رمز عبور برای ایمن سازی اطلاعات کیف
         پول شما در دستگاه استفاده می‌شود. از یک رمز عبور قوی استفاده کنید - حتی بهتر، از یک «عبارت عبور» استفاده کنید.
         </p>
-        <h2>بذر یادگاری خود را روی کاغذ یادداشت کنید!</h2>
+        <h2>بذر یادآوری خود را روی کاغذ یادداشت کنید!</h2>
         <p>
-        در صفحهٔ زیر «بذر یادگاری» 25 کلمه‌ای خود را پیدا خواهید کرد. این تنها چیزی است که برای بازیابی کیف پول
+        در صفحهٔ زیر «بذر یادآوری» 25 کلمه‌ای خود را پیدا خواهید کرد. این تنها چیزی است که برای بازیابی کیف پول
         شما در آینده و دسترسی کامل به وجوه شما مورد نیاز است. نگهداری «ایمن» و «خصوصی» این کلمات بسیار مهم است، زیرا به
         <em>همه</em>
         امکان دسترسی کامل به وجوه شما را می‌دهد!
         </p>
         <p>
-        اگر عبارت عبور کیف پول خود را گم کردید، همچنان می‌توانید کیف پول خود را با بذر یادگاری بازیابی کنید.
+        اگر عبارت عبور کیف پول خود را گم کردید، همچنان می‌توانید کیف پول خود را با بذر یادآوری بازیابی کنید.
         </p>
         <p>
-        هیچ راهی برای بازیابی بذر یادگاری وجود ندارد، اگر آن را از دست بدهید تمام سرمایهٔ شما از بین خواهد رفت!
-        بذر یادگاری نیز هرگز قابل تغییر نیست، و اگر به سرقت رفته یا به خطر بیفتد، باید وجوه خود را به کیف‌پول
-        جدید (با یک بذر جدید) منتقل کنید. بنابراین، بهتر است از بذر یادگاری خود با نوشتن و ذخیرهٔ آن در
+        هیچ راهی برای بازیابی بذر یادآوری وجود ندارد، اگر آن را از دست بدهید تمام سرمایهٔ شما از بین خواهد رفت!
+        بذر یادآوری نیز هرگز قابل تغییر نیست، و اگر به سرقت رفته یا به خطر بیفتد، باید وجوه خود را به کیف‌پول
+        جدید (با یک بذر جدید) منتقل کنید. بنابراین، بهتر است از بذر یادآوری خود با نوشتن و ذخیرهٔ آن در
         <em>چندین</em>
         مکان امن و مطمئن، پشتیبان تهیه کنید.
         </p>
@@ -33,7 +33,7 @@
         یک نام کیف پول و رمز عبور منحصر به فرد وارد کنید. رمز عبور برای ایمن سازی اطلاعات کیف پول شما
         در دستگاه استفاده می‌شود. از یک رمز عبور قوی استفاده کنید - حتی بهتر، از یک «عبارت عبور» استفاده کنید.
         </p>
-        <p>بذر خود را در قسمت «بذر یادگاری» وارد کنید.<p>
+        <p>بذر خود را در قسمت «بذر یادآوری» وارد کنید.<p>
         <p>
         شمارهٔ بلوک اولین تراکنش استفاده شده برای این آدرس را در فیلد «ارتفاع بازیابی» وارد کنید. همچنین می‌توانید از تاریخ میلادی در قالب
         YYYY-MM-DD
@@ -98,7 +98,7 @@
         <h2>آدرس عمومی</h2>
         آدرس عمومی شما مانند شمارهٔ حساب بانکی شما است که می‌توانید آن را با هرکسی به اشتراک بگذارید
         بدون اینکه نگران از دست دادن مونروی خود باشید. دیگران مونرو را با استفاده از این آدرس به کیف پول شما ارسال می‌کنند.
-        <h2>بذر یادگاری</h2>
+        <h2>بذر یادآوری</h2>
         این تنها داده‌ای است که برای بازیابی کیف پول شما در آینده و دسترسی کامل به وجوه شما مورد نیاز است.
         نگهداری خصوصی و امن این بذر بسیار مهم است، زیرا به <em>هرکسی</em> اجازه دسترسی کامل به مونروی
         شما را می‌دهد! اگر این کد را در جایی امن یادداشت نکرده‌اید، لطفاً انجام دهید!
@@ -128,7 +128,7 @@
         به کیف پول شما بدون اجازه داشتن برای خرج کردن وجوه، استفاده شود.
         <h2>کلید مصرف</h2>
         کلید مصرف شما به هرکسی اجازه می‌دهد مونروی مربوط به کیف پول شما را خرج
-        کند، بنابراین این کلید را به کسی نگویید، آن را مانند بذر یادگاری خود ایمن نگه دارید.
+        کند، بنابراین این کلید را به کسی نگویید، آن را مانند بذر یادآوری خود ایمن نگه دارید.
     ]]></string>
 
     <string name="help_list"><![CDATA[
@@ -325,7 +325,7 @@
         <h1>«گِره‌ها»</h1>
         <h2>خلاصه</h2>
         <p>
-        فهرست گره‌ها را با پایین کشیدن بازخوانی کنید و با نشانک‌گذاری ۳ تا ۵ گره به مونروجو اجازه دهید بهترین مورد را برای شما انتخاب کند!
+        فهرست گره‌ها را با پایین کشیدن تازه‌‌سازی کنید و با نشانک‌گذاری ۳ تا ۵ گره به مونروجو اجازه دهید بهترین مورد را برای شما انتخاب کند!
         </p>
         <h2>گره چیست؟</h2>
         <p>
