--- a/app/src/main/res/layout/fragment_tx_info.xml
+++ b/app/src/main/res/layout/fragment_tx_info.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:fillViewport="true"
-    android:transitionName="@string/tx_details_transition_name">
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,6 +32,7 @@
                     android:layout_height="wrap_content"
                     android:selectAllOnFocus="true"
                     android:textIsSelectable="true"
+                    android:transitionName="@string/tx_details_transition_name"
                     tools:text="+ 1,092.00229" />
 
                 <TextView
