--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -31,8 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:text="@string/tx_subaddress"
-            android:textAlignment="textStart"
-            android:transitionName="@string/receive_transition_name" />
+            android:textAlignment="textStart" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,7 +97,6 @@
                 android:backgroundTint="#ffffffff"
                 android:clickable="true"
                 android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
                 card_view:contentPadding="4dp">
 
                 <TextView
@@ -119,7 +117,8 @@
                     android:id="@+id/qrCode"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="true" />
+                    android:adjustViewBounds="true"
+                    android:src="#fff" />
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
