--- a/app/src/main/res/values-ta/help.xml
+++ b/app/src/main/res/values-ta/help.xml
@@ -14,11 +14,11 @@
         கமுக்கமாக வைத்திருப்பது மிகவும் முக்கியமானதாகும்!</p>
         <p>நீங்கள் உங்கள் பணப்பை கடவுச்சொல்லை மறந்துவிட்டீர்கள் எனறால், இந்த நினைவி விதையை கொண்டு உங்களால் 
         உங்கள் பணப்பையை மீட்டெடுக்க இயலும்.</p>
-        <p>உங்கள் நினைவி விதையை மீட்டெடுக்க எந்த வழியும் இல்லை. இதை தொலைத்து விட்டீர்கள் என்றால் உங்கள் மொத்த வைப்பும் தொலைந்து விட்டதாக பொருள்!
-        The Mnemonic Seed can also never be changed, and if it is stolen or otherwise compromised,
-        you will have to move your funds to new wallet (with a new Mnemonic Seed). Therefore, it is best
-        that you backup your Mnemonic Seed by writing it down and storing it in <em>multiple</em> safe
-        and secure places.</p>
+        <p>உங்கள் நினைவி விதையை மீட்டெடுக்க எந்த வழியும் இல்லை. இதைத் தொலைத்து விட்டீர்கள் என்றால் உங்கள் 
+        மொத்த வைப்பும் தொலைந்து விட்டதாகப் பொருள்! நினைவி விதையையும் ஒருபோதும் மாற்ற இயலாது. மேலும், இது தொலைந்தோ
+        அல்லது காணாமல் போனாலோ உங்கள் பணத்தை ஒரு புதிய பணப்பைக்கு மாற்ற வேண்டி வரும் (ஒரு புதிய நினைவி 
+        விதையைக் கொண்டு). எனவே, உங்கள் நினைவி விதையை ஒன்றிற்கும் மேற்பட்ட <em>பாதுகாப்பான</em> இடங்களில் 
+        கைப்பட எழுதி வைப்பது இன்றியமையாததாகும்.</p>
     ]]></string>
 
     <string name="help_create_seed"><![CDATA[
@@ -92,10 +92,11 @@
         இது ஊடுருவலை மிக கடினமானதாக்குகிறது!<br/>
         இந்த சிறப்பியல்பு எல்லா புதிதாக உருவாக்கப்பட்ட பணப்பைகளுக்கும் கட்டாயமானதாகும்.
         <h3>மரபுவழி கடவுச்சொல்</h3>
-        If you see your passphrase here, your wallet files are not as secure as when using
-        a CrAzYpass. To fix this, simply select \"Change Passphrase\" from the menu. After entering
-        a new passphrase (maybe even the same one as before) the app will generate a CrAzYpass for
-        you and secure your wallet files with it. Write it down!
+        உங்கள் கடவுத்தொடரை இங்குக் காண நேர்ந்தால், உங்கள் பணப்பை கோப்பானது CrAzYpass ஐ பயன்படுத்தும்போது 
+        உள்ள பாதுகாப்பைக் காட்டிலும் சற்று குறைவாக உள்ளது எனப் பொருள் கொள்ளலாம். இதைச் சரி செய்ய, சிறுபட்டியிலிருந்து 
+        \"கடவுச்சொற்றொடரை மாற்று\" என்பதைத் தேர்ந்தெடுக்கவும். இதில் புதிய கடவுத்தொடரை (அல்லது அதே கடவுத்தொடரை) இட்டவுடன் 
+        செயலியானது ஒரு CrAzYpass ஐ உங்களுக்காக உற்பத்தி செய்து, உங்கள் பணப்பை கோப்புகளை அதைக்கொண்டு பாதுகாக்கும். இதை
+        எழுதி வைத்துக் கொள்ளவும்!
         <h3>CrAzYpass பணப்பைகள்</h3>
         If you ever need to reinstall Monerujo (for example after resetting your phone or switching
         to a new one) or you want to use your wallet files on a different device or PC, you have to
@@ -103,11 +104,11 @@
         By selecting \"Change Passphrase\" from the menu, you can choose another passphrase. Beware
         that this will generate a new Recovery Password. Write it down!
         <h2>பார்வை திறவுகோல்</h2>
-        Your view key can be used to monitor incoming transactions to your wallet without giving
-        permission to spend the funds inside your wallet.
+        பார்வை திறவுகோலானது உங்கள் பணப்பைக்கு உள்வரும் பரிமாற்றங்களை, அவற்றிற்கு உங்கள் பணப்பையில் 
+        உள்ள பணத்தைச் செலவழிப்பதற்கு அனுமதி அளிக்காமல் அவற்றைக் கண்காணிக்கப் பயன்படும்.
         <h2>செலவழி திறவுகோல்</h2>
-        Your spend key allows anyone to spend the Monero associated with your wallet, so don’t tell
-        anyone this key, keep it safe like your Mnemonic Seed.
+        உங்கள் செலவழி திறவுகோலானது உங்கள் பணப்பையோடு தொடர்புடைய மொனேரொவை யாரேனும் ஒருவர் செலவழிக்க அனுமதிக்கிறது.
+        ஆகையால், நினைவி விதையைப் போல் இதைப் பற்றியும் யாரிடமும் சொல்லாதீர்கள்.
     ]]></string>
 
     <string name="help_list"><![CDATA[
@@ -148,13 +149,13 @@
         இது முழுக்க முழுக்க விருப்பம் சார்ந்தது மற்றும் கமுக்கமானது. எடுத்துக்காட்டாக, உங்கள் பரிமாற்றத்தை நீங்கள் வாங்கிய 
         பொருட்களோடு சமரசப்படுத்த ஒரு வணிக நிறுவனத்திற்கு இது உதவலாம்.
         <h2>TX ID</h2>
-        This is your Transaction ID you can use it to identify your obfuscated transaction on a Monero
-        Blockchain explorer like <a href="https://xmrchain.net/">https://xmrchain.net/</a>
+        இது உங்கள் பரிமாற்ற ID ஆகும். இதை நீங்கள் <a href="https://xmrchain.net/">https://xmrchain.net/</a> போன்ற 
+        உங்கள் மொனேரொ தொகுப்பு சங்கிலி தேடலறிஞரில் தெளிவற்றதாக்கப்பட்ட பரிமாற்றங்களை அடையாளம் காணப் பயன்படுத்தலாம்.
         <h2>TX KEY (பரிமாற்ற திறவுகோல்)</h2>
-        This is your transaction private key, keep this safe as revealing this to a third party
-        reveals which signature in a ring is yours, thereby making your transaction transparent.
-        <h2>Block</h2>
-        This was the block your transaction was included in.
+        இது உங்கள் தனிப்பட்ட பரிமாற்ற திறவுகோலாகும். இதைப் பாதுகாப்பாக வைத்திருக்கவும். இது மூன்றாம் நபருக்குத் தெரிந்தால் வளையத்தில் உள்ள
+        கையொப்பத்தில் எது உங்கள் கையொப்பம் என்பதைக் காட்டிக்கொடுத்துவிடும். இதனால் உங்கள் பரிமாற்றம் வெளிப்படையானதாகிவிடும்.
+        <h2>தொகுப்பு</h2>
+        இது உங்கள் பரிமாற்றம் சேர்க்கப்பட்டுள்ள தொகுப்பாகும்.
     ]]></string>
 
     <string name="help_send"><![CDATA[
@@ -217,23 +218,23 @@
 
     <string name="help_wallet"><![CDATA[
         <h1>பணப்பை</h1>
-        <h2>வீதி பாங்கு</h2>
+        <h2>வீதி பயன்முறை</h2>
         <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
         balance is not shown on any screen so you can safely use your wallet on the street, a pub or
         other public place. Previous transactions are also hidden. New transactions will be shown, so
         you can see that you have sent/received sweet Moneroj!</p>
-        <h2>Scanning</h2>
+        <h2>வருடல்</h2>
         Because Monero likes to keep things private, every time you open a Monerujo wallet we have to
         scan the blockchain to see if any new Moneroj have been sent to your wallet, this only
         stores information to your phone which belongs to your wallet. Sometimes it can take a while
         because you haven’t synced in a long time.
-        <h2>The Balance</h2>
-        <p><b>Help! My wallet balance has disappeared or is unconfirmed!</b><br/>
+        <h2>இருப்பு</h2>
+        <p><b>காப்பாற்றுங்கள்! எனது பணப்பை இருப்பு மறைந்துவிட்டது / உறுதிப்படுத்தப்படவில்லை எனக் காட்டுகிறது!</b><br/>
         Don’t panic! When you send funds from your wallet, some of your balance will temporarily show
         as unconfirmed.
         This happens as a result of how Monero is exchanged on the blockchain and how change works.
         Read more about change at https://getmonero.org/resources/moneropedia/change.html
-        <h2>Transaction List</h2>
+        <h2>பரிமாற்ற பட்டியல்</h2>
         <p>A list of the wallet transactions. In view wallets, only incoming transactions are shown.</p>
     ]]></string>
 
@@ -261,13 +262,13 @@
         is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
         <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
         would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
+        <h2>கணுவை சேர்க்க</h2>
+        <p>கீழுள்ள &quot;கணுவை சேர்&quot; பொத்தானைத் தட்டிய பிறகு, கணு விவரங்களை உள்ளிடும்படி 
+        பின்வரும் உரையாடலில் கேட்டுக்கொள்ளப்படுவீர்.
+        &quot;முகவரி&quot; என்பது கணுவின் புரவலன் பெயர் அல்லது IP முகவரியாகும் - இது மட்டும்தான் கட்டாயமாக
+        நிரப்ப வேண்டிய ஒன்று.
+        முன்னிருப்பு-அல்லாத துரையில் (எ.கா. 18089) கணு இயங்கினால் &quot;துரை&quot; ஐ உள்ளிடவும்.
+        கணுவை பின்பு எளிதில் கண்டறிவதற்கு, நீங்கள் விரும்பினால் அதற்கு ஒரு பெயரைச் சூட்டலாம்.
         Some nodes require credentials to use them. Enter the provided username &amp;
         password in the appropriate fields. Now you can &quot;Test&quot; these setting.
         The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
@@ -276,14 +277,13 @@
         Or the hostname/port combination does not point to an actual Monero Node!
         Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
         bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+        <h2>கணுக்களுக்காக வருடவும்</h2>
+        <p>கூடுதலாக, கணுக்களுக்காக நீங்கள் வலையமைப்பை வருடலாம். Monerujo வானது தொலைநிலை கணுக்களுக்காக 
+        வலையமைப்பில் துறை 18089 இல் வருடலைத் தொடங்கும். தொடக்கத்தில் இது மொனேரொ P2P வலையமைப்பில் உள்ள மற்ற 
+        தோழர்களுக்கான உங்கள் புத்தகக்குறியிட்ட கணுக்களைக் கேட்கும், பின் அந்த தோழர்களிடம் உள்ள மற்ற தோழர்களுக்கான 
+        புத்தகக்குறியிட்ட கணுக்கள் எனக் கேட்டுக்கொண்டே போகும். உங்களிடம் எந்த புத்தகக்குறியிட்ட கணுக்களும் இல்லையென்றால் 
+        (அல்லது அவை அவற்றின் தோழர்களைப் பற்றி நம்மிடம் எதையும் சொல்லவில்லையென்றால்), Monerujo வானது மொனேரொவில் வன்பொதியப்பட்டுள்ள
+        மொனேரொ விதை கணுக்களிடம் நேராகச் சென்றுவிடும். மொத்தமாக 10 தொலைநிலை கணுக்களைக் கண்டறிந்த பின் வருடல் நின்றுவிடும்.</p>
     ]]></string>
 
     <string name="help_uri"><![CDATA[
@@ -294,7 +294,7 @@
         2. பணப்பை ஒத்திசைவு முடிந்து "பெறு" பொத்தான் தோன்றும்வரை காத்திருக்கவும்<br>
         3. "பெறு" பொத்தானை தொடவும்
         </p>
-        <p>The payment details will be filled in. Check them and proceed like for any other transaction.</p>
+        <p>பணம் செலுத்தல் விவரங்கள் நிரப்பப்பட்டிருக்கும். அவற்றைச் சரிபார்த்த பின் மற்ற பரிமாற்றங்களைப் போலப் பணம் செலுத்தத் தொடரவும்.</p>
     ]]></string>
 
     <string name="help_ok">புரிந்தது!</string> <!-- Note: "Got it" as in "I understand this" -->
@@ -302,21 +302,21 @@
     <string name="help_nok">தேவையில்லை…</string> <!-- Note: "Nah..." as in "I don't want this" -->
     <string name="help_getorbot">ஆர்பாட் ஐ பெறு!</string>
     <string name="help_tor"><![CDATA[
-        <h1>Tor</h1>
-        <p>Tor, short for The Onion Router, is free and open-source software for enabling anonymous
-        communication.</p>
-        <p>Enabling Tor will route your connection through several relays and hide your IP address
-        from the node. Keep in mind this is more private but also <b>slower</b>.</p>
-        <p>In order to use Tor with Monerujo, you\'ll need Orbot installed on your phone. After
-        installing Orbot, make sure to enable it by clicking the network icon on the wallet list
-        screen.</p>
-        <p>If you have issues connecting with Tor, try to get a new Identity in the Orbot App (icon
-        on the top right).</p>
+        <h1>TOR</h1>
+        <p>TOR என்பது The Onion Router என்பதன் சுருக்கமாகும், இது பெயரிலி தொடர்பைச் செயல்படுத்துவதற்குப் பயன்படுத்தப்படும்  
+        ஒரு கட்டற்ற மற்றும் திறந்த மூல மென்பொருளாகும்.</p>
+        <p>TOR ஐ செயல்படுத்துவதன் மூலம் உங்கள் இணைப்பு பல்வேறு தொடர் ஓட்ட இணைப்புகளின் வழியாகச் சென்று
+        கணுவிடமிருந்து உங்கள் IP முகவரியை மறைக்கிறது. இது மிகவும் பாதுகாப்பானது எனினும் <b>மெதுவானதும் கூட</b> என்பதை 
+        நினைவில் கொள்ளவும்.</p>
+        <p>Monerujo உடன் TOR ஐ சேர்த்துப் பயன்படுத்த, உங்கள் கைப்பேசியில் ஆர்பாட் நிறுவப்பட்டிருக்க வேண்டும். ஆர்பாட்டை நிறுவியவுடன்
+        பணப்பை பட்டியல் திரையில் உள்ள வலையமைப்பு சின்னத்தைத் தட்டுவதன் மூலம் ஆர்பாட்டை செயல்படுத்துவதை உறுதிசெய்து கொள்ளவும்.</p>
+        <p>TOR உடன் இணைப்பதில் சிக்கல் ஏற்பட்டால், ஆர்பாட் செயலியில் ஒரு புதிய அடையாளத்தை பெற முயற்சிக்கவும்.
+        (சின்னம் மேல் வலப்பக்கத்தில் உள்ளது).</p>
     ]]></string>
 
     <string name="help_tor_enable"><![CDATA[
-        <h1>Tor Node</h1>
-        <p>This is an .onion node. In order to use it, you must enable Tor mode by touching the
-        <img src="ic_network_clearnet"/> icon near the top of the Wallet List page.</p>
+        <h1>TOR கணு</h1>
+        <p>இது ஒரு .onion கணுவாகும். இதை பயன்படுத்த நீங்கள் பணப்பை பட்டியல் பக்கத்தின் மேல் உள்ள <img src="ic_network_clearnet"/>
+        சின்னத்தை தட்டி TOR பயன்முறையை செயல்படுத்தவும்.</p>
     ]]></string>
 </resources>
