Hebrew localization fix
ez hebrew for based JewJitsu ninjas

--- a/app/src/main/res/values-he/about.xml
+++ b/app/src/main/res/values-he/about.xml
@@ -17,7 +17,7 @@
         <h1>מדיניות פרטיות</h1>
         <p>דף זה מודיע לך על המדיניות שלנו בנוגע לאיסוף,
         שימוש וגילוי של מידע אישי שאנו מקבלים ממשתמשים שלנו
-        באפליקציה (מונרוג'ו: ארנק מונרו).
+        באפליקציה (מונרוג\'ו: ארנק מונרו).
         </p>
         <p>על ידי שימוש באפליקציה, אתה מסכים לאיסוף המידע ולשימוש בו
         בהתאם למדיניות זו.
@@ -30,12 +30,12 @@
         בצורה מוצפנת.
         </p>
         <p>נתונים אישיים אחרים אינם נאספים על-ידי האפליקציה.</p>
-        <p>אם אתה משתמש בפונקציונליות החליפין (אופציונלי), מונרוג'ו לוקח את שער החליפין
+        <p>אם אתה משתמש בפונקציונליות החליפין (אופציונלי), מונרוג\'ו לוקח את שער החליפין
         באמצעות ה-API הציבורי של coinmarketcap.com.
         ראה את מדיניות הפרטיות שלהם בכתובת https://coinmarketcap.com/privacy בשביל
         פרטים על אופן איסוף הנתונים בבקשות שלך.</p>
         <p>אם אתה משתמש באפליקציה כדי לשלם לכתובות BTC, אתה תשתמש בשירות SideShift.ai.
-        ראה את מדיניות הפרטיות שלהם בכתובת https://sideshift.ai/ לפרטים נוספים. מונרוג'ו שולח להם
+        ראה את מדיניות הפרטיות שלהם בכתובת https://sideshift.ai/ לפרטים נוספים. מונרוג\'ו שולח להם
         את כתובת היעד וסכום הביטקוין. כתובת ה-אייפי שלך תהיה גם ניתנת לאיסוף.p>
         <h2>הרשאות אפליקציה</h2>
         <ul>
