--- a/app/src/main/res/values-he/help.xml
+++ b/app/src/main/res/values-he/help.xml
@@ -5,7 +5,7 @@
         <p>אם אתה צריך כתובת מונרו חדשה!</p>
         <p>הזן שם ארנק וסיסמה יחודיים.
         הסיסמה משמשת לאבטחת נתוני הארנק שלך במכשיר. השתמש בסיסמה חזקה -
-        אפילו טוב יותר להשתמש ב- passphrase.</p>
+        אפילו טוב יותר להשתמש ב- ביטוי סיסמה.</p>
         <h2>שימו לב ל- מנמוניק סיד!</h2>
         <p>במסך הזה תוכל למצוא את \"מנמוניק סיד\" אשר בנוי מ-25 מילים.
         אלה הנתונים היחידים הדרושים כדי לשחזר את הארנק שלך בשלב מאוחר יותר
@@ -22,9 +22,9 @@
 
     <string name="help_create_seed"><![CDATA[
         <h1>צור ארנק - סיד</h1>
-        <p>אם כבר יש לך כתובת Monero וברצונך לשחזר את העסקאות מהבלוקצ'יין!</p>
+        <p>אם כבר יש לך כתובת Monero וברצונך לשחזר את העסקאות מהבלוקצ\'יין!</p>
         <p>הזן שם ארנק וסיסמה יחודיים. הסיסמה משמשת לאבטחת נתוני הארנק שלך במכשיר.
-        השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- passphrase.</p>
+        השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- ביטוי סיסמה.</p>
         <p>הזן את ה- סיד בשדה הכתיבה \"מנמוניק סיד\".<p>
         <p>הזן את מספר הבלוק של העסקה הראשונה ששימשה עבור כתובת זו 
         בשדה הכתיבה \"שחזור גובה\". ניתן גם להשתמש בתאריך בתבנית יום-חודש-שנה. אם אינך בטוח,
@@ -37,7 +37,7 @@
         <p>המפתחות הסודיים שלך לעולם לא עוזבים את ה- Ledger device, אז אתה צריך את זה מחובר
         בכל פעם שתרצה לגשת לארנק שלך.</p>
         <p>הזן שם ארנק וסיסמה יחודיים. הסיסמה משמשת לאבטחת נתוני הארנק שלך במכשיר
-        האנדרואיד. השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- passphrase.</p>
+        האנדרואיד. השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- ביטוי סיסמה.</p>
         <p>הזן את מספר הבלוק של העסקה הראשונה ששימשה עבור כתובת זו
         בשדה הכתיבה \"שחזור גובה\". ניתן גם להשתמש בתאריך בתבנית יום-חודש-שנה. אם אינך בטוח,
         הזן תאריך משוער/גובה-הבלוק <em>לפני</em> שהשתמשת לראשונה בכתובת ארנק זו.</p>
@@ -47,7 +47,7 @@
         <h1>צור ארנק - מפתחות</h1>
         <p>אם אתה משחזר את הארנק באמצעות המפתחות שלך!</p>
         <p>הזן שם ארנק וסיסמה יחודיים. הסיסמה משמשת לאבטחת נתוני הארנק שלך במכשיר.
-        השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- passphrase.<p>
+        השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- ביטוי סיסמה.<p>
         <p>הזן את כתובת מונרו שלך בשדה הכתיבה \"כתובת ציבורית\" ותמלא את- \"הצג מפתח\" ו-  \"מפתח הוצאה\".</p>
         <p>הזן את מספר הבלוק של העסקה הראשונה ששימשה עבור כתובת זו 
         בשדה הכתיבה \"שחזור גובה\". ניתן גם להשתמש בתאריך בתבנית יום-חודש-שנה. אם אינך בטוח,
@@ -58,7 +58,7 @@
         <h1>צור ארנק - הצגה</h1>
         <p>אם אתה רק רוצה לפקח על עסקאות נכנסות לארנק!</p>
         <p>הזן שם ארנק וסיסמה יחודיים. הסיסמה משמשת לאבטחת נתוני הארנק שלך במכשיר.
-        השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- passphrase.<p>
+        השתמש בסיסמה חזקה - אפילו יותר טוב להשתמש ב- ביטוי סיסמה.<p>
         <p>הזן את כתובת מונרו שלך בשדה הכתיבה \"כתובת ציבורית\" ותמלא את- \"הצג מפתח\" ו-  \"מפתח הוצאה\".</p>
         <p>הזן את מספר הבלוק של העסקה הראשונה ששימשה עבור כתובת זו 
         בשדה הכתיבה \"שחזור גובה\". ניתן גם להשתמש בתאריך בתבנית יום-חודש-שנה. אם אינך בטוח,
@@ -105,12 +105,12 @@
     <string name="help_list"><![CDATA[
         <h1>רשימת ארנקים</h1>
         <h2>חוליה</h2>
-        <p>מונרוג'ו משתמש בחוליה מרוחקת כדי לתקשר עם רשת מונרו מבלי
-        להוריד ולשמור עותק של כל הבלוקצ'יין כולו. תוכל למצוא רשימה של חוליות
+        <p>מונרוג\'ו משתמש בחוליה מרוחקת כדי לתקשר עם רשת מונרו מבלי
+        להוריד ולשמור עותק של כל הבלוקצ\'יין כולו. תוכל למצוא רשימה של חוליות
         פופולריות או ללמוד איך להריץ חוליה מרוחקת משלך כאן https://moneroworld.com/<p>
-        <p>מונרוג'ו מגיע עם כמה חוליות מרוחקות מוגדרות מראש. הוא זוכר את חמשת החוליות האחרונות שבהם נעשה שימוש.</p>
+        <p>מונרוג\'ו מגיע עם כמה חוליות מרוחקות מוגדרות מראש. הוא זוכר את חמשת החוליות האחרונות שבהם נעשה שימוש.</p>
         <h2>ארנקים</h2>
-        <p>כאן תוכל לראות את הארנקך. הם ממוקמים ב תקיה של <tt>מונרוג'ו</tt>
+        <p>כאן תוכל לראות את הארנקך. הם ממוקמים ב תקיה של <tt>מונרוג\'ו</tt>
         אשר מאוחסנת באחסון הפנימי של המכשיר. באפשרותך להשתמש באפליקציית סייר הקבצים כדי לראות אותם.
         מומלץ לך לבצע גיבויים של תיקיה זו על בסיס קבוע ולשמור אותם על מכשיר אחר
         למקרה שהטלפון שלך יתפוצץ או יגנב.</p>
@@ -119,11 +119,11 @@
         <h3>פרטים</h3>
         <p>הצגת פרטי הארנק, סיד &amp; מפתחות.</p>
         <h3>קבלה</h3>
-        <p>צור קוד QR לקבלת מונרוג'.</p>
+        <p>צור קוד QR לקבלת מונרוג\'.</p>
         <h3>שינוי-שם</h3>
         <p>שינוי שם הארנק. שמות הגיבויים אינם משתנים.</p>
         <h3>גיבוי</h3>
-        <p>צור עותק של הארנק בתיקיית <tt>הגיבויים</tt> בתוך <tt>מונרוג'ו</tt>
+        <p>צור עותק של הארנק בתיקיית <tt>הגיבויים</tt> בתוך <tt>מונרוג\'ו</tt>
         דבר זה יחליף את הגיבויים הנוכחים ששם בגיבויים החדשים.</p>
         <h3>ארכיון</h3>
         <p>בצע גיבוי ומחק את הארנק לאחר מכן. העותק ישאר בתיקיית
@@ -141,7 +141,7 @@
         עם פריט שקנית.
         <h2>מזהה-עסקה</h2>
         זהו מזהה העסקה שלך שאתה יכול להשתמש בו כדי לזהות את העסקה המעורפלת שלך בסייר
-        בלוקצ'יין של מונרו כמו <a href="https://xmrchain.net/">https://xmrchain.net/</a>
+        בלוקצ\'יין של מונרו כמו <a href="https://xmrchain.net/">https://xmrchain.net/</a>
         <h2>מפתח העסקה (Transaction Key)</h2>
         זהו המפתח הפרטי של העסקה שלך, שמור על זה בטוח שכן חשיפת זה לצד השלישי
         חושפת איזו חתימה בטבעת היא שלך, ובכך הופכת את העסקה שלך לשקופה.
@@ -152,7 +152,7 @@
     <string name="help_send"><![CDATA[
         <h1>שליחה</h1>
         <h2>כתובת המקבל</h2>
-        <p>זוהי הכתובת הציבורית של הארנק שאליו אתם שולחים את המונרוג', אתה יכול להעתיק את זה
+        <p>זוהי הכתובת הציבורית של הארנק שאליו אתם שולחים את המונרוג\', אתה יכול להעתיק את זה
         מלוח-העתקה שלך, סרוק קוד QR או הזן אותו באופן ידני. הקפד לבדוק זאת שלוש פעמים
         כדי לוודא שאינך שולח מטבעות לכתובת הלא נכונה.</p>
         <p>בנוסף לשימוש בכתובת XMR, אתה יכול גם להשתמש ב
@@ -165,8 +165,8 @@
         <h1>שליחת ביטקוין</h1>
         <h2>SideShift.ai</h2>
         <p>SideShift.ai הוא שירות צד שלישי הפועל כבורסה ממונרו לביטקוין.
-        אנחנו משתמשים ב- SideShift.ai API כדי לשלב תשלומי ביטקוין במונרוג'ו. אנא בדוק את
-        https://sideshift.ai ותחליט בעצמך אם זה משהו שאתה רוצה להשתמש בו. צוות מונרוג'ו
+        אנחנו משתמשים ב- SideShift.ai API כדי לשלב תשלומי ביטקוין במונרוג\'ו. אנא בדוק את
+        https://sideshift.ai ותחליט בעצמך אם זה משהו שאתה רוצה להשתמש בו. צוות מונרוג\'ו
         אינו קשור ל- SideShift.ai ולא יכול לעזור לך עם השירות שלהם.</p>
         <h2>SideShift.ai שער החליפין<h2>
         <p>במסך \"הסכום\" יוצגו לך הפרמטרים הנוכחיים של השירות SideShift.ai. אלה
@@ -177,7 +177,7 @@
         לזמן מוגבל - ייתכן שתבחין בספירה לאחור בלחצן \"ההוצאה\". שער החליפין עשוי
         להיות שונה מזה האינדיקטיבי שהוצג במסכים קודמים.</p>
         <h2>SideShift.ai מפתח סודי<h2>
-        <p>מכיוון שמונרוג'ו מטפל רק בחלק מונרו של העסקה שלך, ניתן להשתמש במפתח הסודי של ה-SideShift.ai שלך
+        <p>מכיוון שמונרוג\'ו מטפל רק בחלק מונרו של העסקה שלך, ניתן להשתמש במפתח הסודי של ה-SideShift.ai שלך
         כדי לעקוב אחר חלק הביטקוין של ההזמנה שלך בדף הבית של SideShift.ai.</p>
         <h2>SideShift.ai ספירה לאחור!</h2>
         <p>ברגע שהספירה לאחור מגיעה לאפס, עליך לקבל הצעת מחיר חדשה מ- SideShift.ai על ידי חזרה
@@ -188,8 +188,8 @@
         <h1>Sending BTC</h1>
         <h2>SideShift.ai</h2>
         <p>SideShift.ai הוא שירות צד שלישי הפועל כבורסה ממונרו לביטקוין.
-        אנחנו משתמשים ב- SideShift.ai API כדי לשלב תשלומי ביטקוין במונרוג'ו. אנא בדוק את
-        https://sideshift.ai ותחליט בעצמך אם זה משהו שאתה רוצה להשתמש בו. צוות מונרוג'ו
+        אנחנו משתמשים ב- SideShift.ai API כדי לשלב תשלומי ביטקוין במונרוג\'ו. אנא בדוק את
+        https://sideshift.ai ותחליט בעצמך אם זה משהו שאתה רוצה להשתמש בו. צוות מונרוג\'ו
         אינו קשור ל- SideShift.ai ולא יכול לעזור לך עם השירות שלהם.</p>
         <h2>SideShift.ai שער החליפין<h2>
         <p>במסך \"הסכום\" יוצגו לך הפרמטרים הנוכחיים של השירות SideShift.ai. אלה
@@ -200,7 +200,7 @@
         לזמן מוגבל - ייתכן שתבחין בספירה לאחור בלחצן \"ההוצאה\". שער החליפין עשוי
         להיות שונה מזה האינדיקטיבי שהוצג במסכים קודמים.</p>
         <h2>SideShift.ai מפתח סודי<h2>
-        <p>מכיוון שמונרוג'ו מטפל רק בחלק מונרו של העסקה שלך, ניתן להשתמש במפתח הסודי של ה-SideShift.ai שלך
+        <p>מכיוון שמונרוג\'ו מטפל רק בחלק מונרו של העסקה שלך, ניתן להשתמש במפתח הסודי של ה-SideShift.ai שלך
         כדי לעקוב אחר חלק הביטקוין של ההזמנה שלך בדף הבית של SideShift.ai.</p>
         <h2>SideShift.ai ספירה לאחור!</h2>
         <p>ברגע שהספירה לאחור מגיעה לאפס, עליך לקבל הצעת מחיר חדשה מ- SideShift.ai על ידי חזרה
@@ -213,17 +213,17 @@
         <p>ניתן להפעיל/להשבית את מצב הרחוב בתפריט או בסמל הראש של גונתר. במצב זה, היתרה
         שלך אינה מוצגת על שום מסך, כך שתוכל להשתמש בבטחה בארנק שלך ברחוב, פאב או
         כל מקום צבורי אחר. גם עסקאות קודמות מוסתרות. עסקאות חדשות יוצגו, so
-        כך שתוכל לראות ששלחת/קיבלת מונרוג' מתוק!</p>
+        כך שתוכל לראות ששלחת/קיבלת מונרוג\' מתוק!</p>
         <h2>סריקה</h2>
-        מכיוון שמונרו אוהב לשמור בפרטיות על דברים, בכל פעם שאתה פותח ארנק מונרוג'ו אנחנו צריכים
-        לסרוק את הבלוקצ'יין כדי לראות אם מונרוג' חדש נשלח לארנק שלך, פעולה זו
+        מכיוון שמונרו אוהב לשמור בפרטיות על דברים, בכל פעם שאתה פותח ארנק מונרוג\'ו אנחנו צריכים
+        לסרוק את הבלוקצ\'יין כדי לראות אם מונרוג\' חדש נשלח לארנק שלך, פעולה זו
         מאחסנת רק מידע השייך לארנק שלך בטלפונך. לפעמים זה יכול לקחת זמן מה
         מכוון שלא הסתנכרנת הרבה זמן.
         <h2>היתרה</h2>
         <p><b>עזרה! יתרת הארנק שלי נעלמה או שאינה מאושרת!</b><br/>
         אל תיבהל! כאשר אתה שולח כספים מהארנק שלך, חלק מהיתרה שלך תוצג באופן זמני
         כלא מאושרת.
-        זה קורה כתוצאה מהאופן שבו מונרו מוחלפת בבלוקצ'יין ואיך השינוי עובד.
+        זה קורה כתוצאה מהאופן שבו מונרו מוחלפת בבלוקצ\'יין ואיך השינוי עובד.
         קרא עוד על שינוי ב- https://getmonero.org/resources/moneropedia/change.html
         <h2>רשימת עסקאות</h2>
         <p>רשימה של עסקאות הארנק. בארנקי תצוגה, מוצגות רק עסקאות נכנסות.</p>
@@ -232,14 +232,14 @@
     <string name="help_node"><![CDATA[
         <h1>חוליות</h1>
         <h2>אמ;לק</h2>
-        <p>רענן את רשימת החוליות על ידי משיכת &amp; סימנית 3&#8211;5 חוליה למטה כדי לאפשר למונרוג'ו
+        <p>רענן את רשימת החוליות על ידי משיכת &amp; סימנית 3&#8211;5 חוליה למטה כדי לאפשר למונרוג\'ו
         לבחור את הטוב ביותר עבורך!!</p>
         <h2>מה&apos;זה חולייה?</h2>
-        <p>מונרוג'ו משתמש בחולייה מרוחקת (המכונה לעתים גם Daemon) כדי לתקשר עם
+        <p>מונרוג\'ו משתמש בחולייה מרוחקת (המכונה לעתים גם Daemon) כדי לתקשר עם
         מבלי להוריד ולאחסן עותק של
-        כל הבלוקצ'יין עצמו.<p>
+        כל הבלוקצ\'יין עצמו.<p>
         <h2>רשימת חוליות</h2>
-        <p>אם הרשימה ריקה, באפשרותך להוסיף צמתים חדשים באופן ידני או לאפשר למונרוג'ו
+        <p>אם הרשימה ריקה, באפשרותך להוסיף צמתים חדשים באופן ידני או לאפשר למונרוג\'ו
         לסרוק את הרשת עבורך. או שניהם. קרא ב&#8230;</p>
         <p>רשימת החוליות מציגה את כל חוליות הידועות כעת. בנוסף, חותמת הזמן
         של הבלוק האחרון הידוע לכל חולייה תחת שמה. סמל המייצג
@@ -248,9 +248,9 @@
         מוצג ליד כל חולייה.</p>
         <p>כל חולייה ברשימה יכולה להיות מסומנת בסימניה לשימוש מאוחר יותר.
         חוליות שאינן מסומנות בסימניה יישכחו.<p>
-        <p>מונרוג'ו יבחר את החולייה האופטימלית בסימניה בכל פעם שתשתמש בו.
+        <p>מונרוג\'ו יבחר את החולייה האופטימלית בסימניה בכל פעם שתשתמש בו.
         הוא עושה זאת על ידי בדיקת גובה-הבלוק (עד כמה החולייה מעודכנת?) כמו גם את התנהגות התגובה (כמה מהר החולייה מגיבה לבקשות?).</p>
-        <p>הרשימה ממוינת לפי מאפיינים אלה, כך שהחולייה העליונה תהיה זו שמונרוג'ו
+        <p>הרשימה ממוינת לפי מאפיינים אלה, כך שהחולייה העליונה תהיה זו שמונרוג\'ו
         יבחר כרגע. החלק התחתון של הרשימה יציג חוליות איטיות מאוד או לא זמינים.</p>
         <h2>הוספת חולייה</h2>
         <p>על-ידי נגיעה בלחצן &quot;הוספת חולייה&quot; בתחתית, תתבקש
@@ -268,18 +268,18 @@
         לאחר שהבדיקה עוברת (ללא שגיאה) - אתה מוגדר ללחוץ על &quot;אישור&quot; כדי לשמור &amp;
         סימניה של צומת זה.</p>
         <h2>איתור חוליות</h2>
-        <p>בנוסף, באפשרותך לסרוק את הרשת לאיתור חוליות. מונרוג'ו יתחיל
+        <p>בנוסף, באפשרותך לסרוק את הרשת לאיתור חוליות. מונרוג\'ו יתחיל
         לסרוק את הרשת לאיתור חוליות מרוחקות בפורט 18089. זה מתחיל בכך שהוא מבקש
         מהחוליות המסומנות בסימניה שלך עמיתים אחרים ברשת P2P של מונרו ואז ממשיך
         בכך שהוא מבקש מאותם חוליות עבור עימיתיהם, וכן הלאה. אם אין לך חוליות מסומנות בסימניה
         (או שהם לא מספרים לנו על עמיתיהם),
-        מונרוג'ו ילך היישר אל חוליות הסידס של מונרו המקודדים לתוך מונרו.
+        מונרוג\'ו ילך היישר אל חוליות הסידס של מונרו המקודדים לתוך מונרו.
         הסריקה נעצרת כאשר היא מוצאת 10 חוליות מרוחקות בסך הכל.</p>
     ]]></string>
 
     <string name="help_uri"><![CDATA[
         <h1>שימוש בקישור תשלום</h1>
-        <p>התחלת מונרוג'ו עם קישור תשלום. על מנת לשלוח כספים, אנא בצע את הפעולות הבאות:</p>
+        <p>התחלת מונרוג\'ו עם קישור תשלום. על מנת לשלוח כספים, אנא בצע את הפעולות הבאות:</p>
         <p>
         1. פתח את הארנק שממנו ברצונך להוציא<br>
         2. המתן עד לסנכרון הארנק &amp; הופעת כפתור "תן"<br>
@@ -298,7 +298,7 @@
         אנונימית.</p>
         <p>הפעלת Tor תנתב את החיבור שלך דרך מספר ממסרים ותסתיר את כתובת האייפי שלך
         מהחולייה. קחו בחשבון שזה יותר פרטי אבל גם <b>איטי</b> יותר.</p>
-        <p>כדי להשתמש ב-Tor עם מונרוג'ו, תצטרכו להתקין את Orbot בטלפון שלכם. לאחר
+        <p>כדי להשתמש ב-טור עם מונרוג\'ו, תצטרכו להתקין את Orbot בטלפון שלכם. לאחר
         התקנת Orbot, הקפד להפעיל אותו על ידי לחיצה על סמל הרשת במסך רשימת
         הארנק.</p>
         <p>אם אתם נתקלים בבעיות בחיבור עם טור, נסו להשיג זהות חדשה באפליקציית Orbot (סמל
