Added Greek Translation

--- a/app/src/main/res/values-el/about.xml
+++ b/app/src/main/res/values-el/about.xml
@@ -16,10 +16,10 @@
     <string name="privacy_policy"><![CDATA[
         <h1>Πολιτική απορρήτου</h1>
         <p>Η σελίδα σας ενημερώνει για την πολιτική μας περί της συλλογής,
-        χρηση και διάδοση των  personal προσωπικών στοιχείων απο χρήστες της εφαρμογής
+        χρησης και διάδοσης των προσωπικών στοιχείων απο τους χρήστες της εφαρμογής
         μάς (monerujo: Πορτοφόλι Monero).
         </p>
-        <p>Κάνοντας χρήση της εφαρμογής συμφωνείτε στην συλλογή και χρήση πληροφοριών  
+        <p>Κάνοντας χρήση της εφαρμογής συμφωνείτε στην συλλογή και χρήσης πληροφοριών  
         σύμφωνα την συγκριμένη πολιτική.
         </p>
         <h2>Συλλογή Πληροφοριών</h2>
@@ -32,10 +32,10 @@
         <p>Δεν συλλέγονται επιπλέον πληροφορίες.</p>
         <p>Με χρήση του ανταλλακτηριου (προαιρετικό) το monerujo ισοτιμία ανταλλακτήριων 
         μέσω του δημόσιου API απο το coinmarketcap.com.
-        Δείτε την πολιτική απορρήτου τους  στη σελίδα https://coinmarketcap.com/privacy for
-        λεπτομερώς πως συλλέγονται τα στοιχεία  in your κα την αίτηση σας.</p>
+        Δείτε την πολιτική απορρήτου τους στη σελίδα https://coinmarketcap.com/privacy λεπτομέρειες
+        για το πως συλλέγονται τα στοιχεία μέσω της αίτησης σας.</p>
         <p>Με χρήση της εφαρμογής για πληρωμή διεύθυνσης BTC, κάνετε χρήση της υπηρεσίας SideShift.ai.
-        Για λεπτομέρειεςδείτε την πολιτική απορρήτου στο https://sideshift.ai/.Το Monerujo στέλνει 
+        Για λεπτομέρειες δείτε την πολιτική απορρήτου στο https://sideshift.ai/.Το Monerujo στέλνει 
         Διεύθυνση παραλαβής και ποσό BTC. To IP σας επίσεις μπορεί συλλεχθεί.</p>
         <h2>Δικαιώματα εφαρμογής</h2>
         <ul>
