--- a/app/src/main/res/layout/fragment_tx_info.xml
+++ b/app/src/main/res/layout/fragment_tx_info.xml
@@ -11,6 +11,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/llWarning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="?attr/colorError"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvWarning"
+                style="@style/MoneroLabel.Heading"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawablePadding="8dp"
+                android:gravity="start|center_vertical"
+                android:padding="8dp"
+                android:textColor="?colorOnError"
+                app:drawableStartCompat="@drawable/ic_warning_24dp"
+                app:drawableTint="?colorOnError"
+                tools:text="Transaction amount locked until block 322229877 (approx. 2.4 months)" />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
