Greek translation correction

--- a/app/src/main/res/values-el/about.xml
+++ b/app/src/main/res/values-el/about.xml
@@ -50,7 +50,7 @@
         οποιαδήποτε αλλαγή ανακοινώνοντας τη νέα πολιτική στην εφαρμογή και την
         ιστιοσελίδα (www.monerujo.io)
         Σας παροτρυνουμε να ελεγχετε την πολιτική ανα διαστήματα για αλλαγές.
-        <p>Τελευταία αναβάθμιση πολιτικήςβλ απορρήτου: 10 Νοεμβρίου, 2017.
+        <p>Τελευταία αναβάθμιση πολιτικής απορρήτου: 10 Νοεμβρίου, 2017.
         </p>
         <h2>Επικοινωνία</h2>
         <p>Για οποιαδήποτε απορία σχετικά με τη πολιτική απορρήτου,
