--- a/app/src/main/res/layout/item_subaddress.xml
+++ b/app/src/main/res/layout/item_subaddress.xml
@@ -13,25 +13,25 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/tvName"
-            style="@style/MoneroText.Label.Subaddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="My First Subaddress" />
-
-        <TextView
             android:id="@+id/tvAddress"
             style="@style/MoneroText.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="#1: 8AioXCmK...aGivEa7C" />
+
+        <TextView
+            android:id="@+id/tvName"
+            style="@style/MoneroText.Label.Subaddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvAddress"
+            tools:text="My First Subaddress" />
 
         <TextView
             android:id="@+id/tx_amount"
