--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -61,11 +61,12 @@
 
                 <TextView
                     android:id="@+id/tvStreetView"
-                    style="@style/MoneroText.Balance"
+                    style="@style/MoneroText.Info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/menu_streetmode"
+                    android:gravity="center"
+                    android:text="@string/label_streetmode"
                     android:visibility="invisible" />
 
                 <LinearLayout
